--- a/assets/theme/dark.qss
+++ b/assets/theme/dark.qss
@@ -1,6 +1,4 @@
 * {
-    font-family                 : 'Menlo';
-    font-size                   : 11pt;
     background                  : transparent;
 }
 
@@ -407,9 +405,9 @@ QTreeWidget {
 }
 
 QTreeWidget QHeaderView::section {
-    background                  : #363e43;
+    background                  : #363e41;
     color                       : white;
-    margin                      : 2px 2px 2px 0px;
+    margin                      : 2px;
     padding-left                : 8px;
     padding-right               : 8px;
     border-radius               : 4px;
@@ -421,26 +419,19 @@ QTreeWidget QHeaderView::section:last {
 
 QTreeWidget::item {
     background                  : transparent;
-    margin                      : 0px;
-    padding                     : 1px;
-    color                       : lightgray;
+    margin                      : 1px 0px;
+    color                       : gray;
     height                      : 28px;
     border                      : none;
 }
 
-QTreeWidget::item:hover, QTreeWidget::item:selected {
-    background                  : #4a556d;
+QTreeWidget::item:hover{
     color                       : white;
 }
 
-QTreeWidget::item:selected:first, QTreeWidget::item:hover:first {
-    border-top-left-radius       : 4px;
-    border-bottom-left-radius    : 4px;
-}
-
-QTreeWidget::item:selected:last, QTreeWidget::item:hover:last {
-    border-top-right-radius      : 4px;
-    border-bottom-right-radius   : 4px;
+QTreeWidget::item:selected{
+    background                  : #363e41;
+    color                       : white;
 }
 
 QTreeWidget::branch, QTreeWidget::branch:selected {
@@ -542,10 +533,10 @@ QScrollBar::add-line:vertical, QScrollBar::sub-line:vertical, QScrollBar::add-li
 */
 
 QComboBox {
+    background                      : #363e41;
     color                           : white;
     height                          : 24px;
     border-radius                   : 4px;
-    background                      : #363e41;
     padding                         : 0px 2px 0px 4px;
 }
 
@@ -615,7 +606,7 @@ QTextEdit:focus {
 }
 
 QLineEdit {
-    background                  : #40474d;
+    background                  : #363e41;
     height                      : 24px;
     color                       : white;
     padding-left                : 2px;
