--- a/assets/theme/dark.qss
+++ b/assets/theme/dark.qss
@@ -244,7 +244,7 @@ QTabWidget::tab-bar {                                      /* Tab bar style */
 QTabWidget QTabBar::tab {                                  /* Individual tab style */
     height                      : 28px;
     color                       : white;
-    width                       : 60px;
+    width                       : 100px;
     background                  : transparent;
     border-radius               : 4px;
     border                      : none;
@@ -398,7 +398,7 @@ QMenu::right-arrow {                                    /* Submenu arrow style *
 */
 
 QTreeWidget {
-    background                  : #40474d;
+    background                  : #363e41;
     border                      : none;
     outline                     : 0px;
     border-radius               : 4px;
